--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "axios": "^0.17.0",
     "element-ui": "^1.4.8",
+    "mockjs": "^1.0.1-beta3",
     "superagent": "^3.5.2",
     "vue": "^2.3.3",
     "vue-router": "^2.6.0",
